feat：增强对 JDK8 的兼容性